# MomioWorld

./: App.js  README.md  app.json  package-lock.json  package.json
backend/: .env  main.py  momio.db  pyproject.toml
backend/core/: config.py
backend/database/: db.py
backend/models/: family.py  ticket.py  user.py
backend/routers/: family.py  ticket.py  user.py
backend/schemas/: family.py  ticket.py  user.py
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.jsx  _layout.tsx  index.jsx  index.tsx  splash.tsx
mobile/app/family/: [id].tsx  index.tsx
mobile/app/home/: index.jsx  index.tsx
mobile/app/tickets/: [id].tsx  index.tsx  new.tsx
mobile/src/api/: api.js
mobile/src/features/family/: family.api.js
mobile/src/features/tickets/: tickets.api.js
navigator/: stack.js  tabs.js
screens/: choice-screen.js  family-screen.js  home-screen.js  maps-screen.js  site-screen.js  stable-screen.js  venice-screen.js
